# harness-for-myself

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/commands/: update-claude-md.md  update-docs.md
.github/workflows/: ci.yml
configs/: default.json
docs/: architecture.md  deepseek-entrypoint.md  evolution-roadmap.md  getting-started.md  github-readiness-and-distribution.md  harness-3-step-plan.md  harness-foundation.md  phase1-closure-notes.md  phase5-9-evolution-assessment.md  roadmap.md  step1-execution-log.md  step2-reliability-layer.md  uv-local-setup.md
docs/architecture/: 00-overview.md  02-schema.md  03-tools.md  06-context.md  07-session-snapshot.md  08-config.md  10-definitions.md  11-subagent.md  12-project-memory.md  13-logger.md  14-cli.md  16-eval.md  17-test-plan.md  18-rewrite-plan.md
docs/ts-rewrite/: 01-types.md  04-llm.md  05-memory.md  09-agent.md  15-tui.md
scripts/: run_chat.py  run_deepseek.py  run_eval.py  run_mvp.py
src/harness/: __init__.py  agent.py  anthropic_llm.py  cli.py  coding_tools.py  config.py  context.py  definitions.py  error_policy.py  eval.py  llm.py  logger.py  memory.py  project_memory.py  schema.py  session.py  snapshot.py  stop_controller.py  subagent.py  tools.py  tui.py  types.py
tests/: test_agent.py  test_anthropic_llm.py  test_coding_tools.py  test_config.py  test_context.py  test_deepseek.py  test_definitions.py  test_memory.py  test_permissions.py  test_project_memory.py  test_reliability.py  test_schema.py  test_session.py  test_skills.py  test_smoke.py  test_snapshot.py  test_subagent.py  test_tools.py
ts/: eslint.config.js  package-lock.json  package.json  tsconfig.json
ts/src/: agent.ts  anthropic-llm.ts  cli.ts  coding-tools.ts  config.ts  context.ts  definitions.ts  error-policy.ts  eval.ts  hooks.ts  index.ts  llm.ts  logger.ts  mcp.ts  memory.ts  project-memory.ts  schema.ts  session.ts  snapshot.ts  stop-controller.ts  subagent.ts  tasks.ts  tools.ts  tui.ts  types.ts
ts/tests/: agent.test.ts  anthropic-llm.test.ts  cli.test.ts  coding-tools.test.ts  config.test.ts  context.test.ts  deepseek.test.ts  definitions.test.ts  eval.test.ts  hooks.test.ts  memory.test.ts  permissions.test.ts  project-memory.test.ts  reliability.test.ts  schema.test.ts  session.test.ts  smoke.test.ts  snapshot.test.ts  subagent.test.ts  tasks.test.ts  tools.test.ts
