[project]
name = "minimal-agent-harness"
version = "0.1.0"
description = "Minimal single-agent harness with reliability guardrails."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = ["rich>=13.0"]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
