[project]
name = "hau"
version = "0.1.0"
description = "HAU — Harness for Yourself. A testable single-agent harness with strict schemas and reliability guardrails."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
]

