[project]
name = "hau"
version = "0.1.0"
description = "A testable programming agent harness that can autonomously read, search, edit code, and run tests."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["rich>=13.0"]
keywords = ["agent", "harness", "coding-agent", "llm", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/yourname/hau"
Repository = "https://github.com/yourname/hau"
Issues = "https://github.com/yourname/hau/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
]

